# fatigue10s

./: CMakeLists.txt  CMakeLists.txt.user.ebab128  README.md
BCIIA/: CMakeLists.txt
BCIIA/Calculate/: CMakeLists.txt
BCIIA/Calculate/feature/BrainRecognition/: ltr_0.feature  yl_2.feature  zqy_3.feature
BCIIA/Calculate/model/deeplearn/: four_model.onnx
BCIIA/Calculate/src/: base.cpp  base.h  biteteethrecognition.cpp  biteteethrecognition.h  brainrecognition.cpp  brainrecognition.h  calculate.h  tskfatigue.cpp  tskfatigue.h
BCIIA/Calculate/test/: brainrecognition.cpp  deeplearn.cpp  tskfatigue.cpp
BCIIA/DataOperation/Amplifier/filter/src/: filter.cpp  iirfilter.cpp  iirfilter.h
BCIIA/DataOperation/Amplifier/src/: amplifier.cpp  amplifier.h  datathread.cpp  datathread.h  pluginmanage.cpp
BCIIA/DataOperation/FileStorage/: CMakeLists.txt
BCIIA/DataOperation/FileStorage/src/: filestorage.cpp  filestorage.h  storagedata.cpp
BCIIA/DataOperation/src/: dataoperation.cpp  dataoperation.h
BCIIA/UI/curvegroup/CurveWnd/src/: curvewnd.cpp  curvewnd.h
BCIIA/UI/curvegroup/src/: curvegroup.cpp  curvegroup.h
BCIIA/UI/src/: bcimonitor.cpp  bcimonitor.h
BCIIA/src/: bciia.cpp  bciia.h
Eigen/src/Geometry/: AlignedBox.h
LocalAmplifer/SelfAmplifer/: CMakeLists.txt
LocalAmplifer/SelfAmplifer/src/: matread.h  selfamplifer.cpp  selfamplifer.json
MainWidget/: CMakeLists.txt
MainWidget/MIPlay/: CMakeLists.txt
MainWidget/MIPlay/res/: aaa.qrc
MainWidget/MIPlay/src/: micontrolwidget.cpp  micontrolwidget.h  micontrolwidget.ui  mishow.cpp  mishow.h  mishow.ui
MainWidget/MIPlay/test/: CMakeLists.txt  main.cpp
MainWidget/MediaPlay/: CMakeLists.txt
MainWidget/MediaPlay/res/: res.qrc
MainWidget/MediaPlay/src/: mediaplay.cpp  mediaplay.h  mediawidget.cpp  mediawidget.h  mediawidget.ui  playlist.cpp  playlist.h  playlist.ui  taskflow.cpp  taskflow.h  taskflow.ui  toolbutton.cpp  toolbutton.h  toolbutton.ui
MainWidget/MediaPlay/test/: CMakeLists.txt  main.cpp
MainWidget/src/: mainwidget.cpp  mainwidget.h  mainwidget.ui
MainWidget/test/: CMakeLists.txt  main.cpp
SelfAmplifer/: CMakeLists.txt
SelfAmplifer/src/: selfamplifer.cpp  selfamplifer.h  selfamplifer.json
SelfAmplifer/test/: CMakeLists.txt  main.cpp
fatigue/: CMakeLists.txt  CMakeLists.txt.user.fb3e32f
fatigue/res/: mean_acc.txt
fatigue/src/: chart.cpp  chart.h  fatiguereswidget.cpp  fatiguereswidget.h  fatiguereswidget.ui  registerinfo.cpp  registerinfo.h  registerinfo.ui
fatigue/test/: CMakeLists.txt  main.cpp
src/: platformwidget.cpp  platformwidget.h  preFcm.cpp  preFcm.h  preprocessing.cpp  preprocessing.h
